<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/life_story_lines_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/life_story_lines_description" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/lifeStoryLineSwitch"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:layout_marginRight="8dp"
            android:layout_gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/family_tree_lines_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/family_tree_lines_description" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/familyTreeLineSwitch"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:layout_marginRight="8dp"
            android:layout_gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/spouse_lines_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/spouse_lines_description" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/spouseLineSwitch"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:layout_marginRight="8dp"
            android:layout_gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/father_side_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/father_side_description" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/fatherSideSwitch"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:layout_marginRight="8dp"
            android:layout_gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/mother_side_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/mother_side_description" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/motherSideSwitch"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:layout_marginRight="8dp"
            android:layout_gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/male_events_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/gender_events_description" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/maleEventSwitch"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:layout_marginRight="8dp"
            android:layout_gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/female_events_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/gender_events_description" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/femaleEventSwitch"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:layout_marginRight="8dp"
            android:layout_gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/logoutButton"
        android:clickable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:clickable="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:text="@string/logout_button_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:clickable="false"
                android:text="@string/logout_button_description" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        />

</LinearLayout>