<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.PersonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:id="@+id/firstNamePersonText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/person_first_name_header" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:id="@+id/lastNamePersonText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/person_last_name_header" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:id="@+id/genderPersonText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/person_gender_header" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        />

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:indicatorLeft="?android:attr/expandableListPreferredChildIndicatorLeft"
        android:dividerHeight="0.5dp"
        android:divider="@android:color/darker_gray"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />
</LinearLayout>
